Fix not working selector on visible div

--- a/web/css/layout/checkout/_billing.less
+++ b/web/css/layout/checkout/_billing.less
@@ -14,7 +14,7 @@
 
     // Spacing between afterMethods blocks
     .opc-payment {
-        ~ div {
+        ~ div:not([style*="none"]) {
             margin: @6 0 0;
             + div {
                 margin: @1 0 0;
